--- a/about.html
+++ b/about.html
@@ -18,17 +18,25 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Projects?</h3>
+      <h3>About ME!</h3>        
+      <p>Hi! My name is Carolyn, and I am a freshman studying computer science at Purdue University in West Lafayette, Indiana. </p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Projects</h3>
       <p>welcome to my house</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Links?</h3>
-      <p>youtube, github, linkedin </p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Links</h3>
+       youtube channel: <a href = "https://www.youtube.com/channel/UC9dIL7BwtsURihgwbqN1oEg"> carochenz </a>
+      <br> 
+      github: <a href = "https://github.com/carocheez"> carocheez </a>
+      <br> 
+      linkedin: <a href = "https://www.linkedin.com/in/carolyn--chen/"> carolyn chen </a> 
     </div>
     <div class="col-sm-4">
-      <h3>Pictures?</h3>        
+      <h3>Pictures</h3>        
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
